# llmbot

./: README.md  pyproject.toml
llmbot/: __init__.py
scripts/: setup.sh
